--- a/pom.xml
+++ b/pom.xml
@@ -5,18 +5,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<groupId>org.gama</groupId>
-	<artifactId>stalactite</artifactId>
+	<artifactId>reflection</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	
-	<modules>
-		<module>safemodel</module>
-		<module>reflection</module>
-		<module>core</module>
-		<module>orm</module>
-		<module>testbench</module>
-		<module>sql</module>
-	</modules>
 	
 	<properties>
 		<encoding>UTF-8</encoding>
@@ -27,6 +17,11 @@
 	</properties>
 	
 	<dependencies>
+		<dependency>
+			<groupId>org.gama</groupId>
+			<artifactId>tools</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
