--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<mockito.version>2.7.13</mockito.version>
 		<slf4j-api.version>1.7.21</slf4j-api.version>
 		<junit-dataprovider.version>1.12.0</junit-dataprovider.version>
+		<jdk-serializable-functional.version>1.8.2</jdk-serializable-functional.version>
 	</properties>
 	
 	<dependencies>
@@ -33,6 +34,12 @@
 			<artifactId>junit-dataprovider</artifactId>
 			<version>${junit-dataprovider.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.danekja</groupId>
+			<artifactId>jdk-serializable-functional</artifactId>
+			<version>${jdk-serializable-functional.version}</version>
+			<type>jar</type>
 		</dependency>
 	</dependencies>
 	
