--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
 	
 	<dependencies>
 		<dependency>
-			<groupId>org.gama</groupId>
-			<artifactId>tools</artifactId>
+			<groupId>org.codefilarete</groupId>
+			<artifactId>tool</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
@@ -42,8 +42,8 @@
 			<type>jar</type>
 		</dependency>
 		<dependency>
-			<groupId>org.gama</groupId>
-			<artifactId>tools</artifactId>
+			<groupId>org.codefilarete</groupId>
+			<artifactId>tool</artifactId>
 			<type>test-jar</type>
 			<version>1.0-SNAPSHOT</version>
 			<scope>test</scope>
