--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,32 @@
 	<artifactId>reflection</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	
+	<name>Reflection</name>
+	<description>Codefilarete Reflection aims at providing access to bean properties.</description>
+	<url>https://www.codefilarete.org</url>
+	
+	<organization>
+		<name>Codefilarete</name>
+		<url>https://www.codefilarete.org</url>
+	</organization>
+	
+	<developers>
+		<developer>
+			<name>Guillaume Mary</name>
+			<email>codefilarete@gmail.com</email>
+			<organization>Codefilarete</organization>
+			<organizationUrl>https://www.codefilarete.org</organizationUrl>
+		</developer>
+	</developers>
+	
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>https://choosealicense.com/licenses/mit/</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	
 	<properties>
 		<encoding>UTF-8</encoding>
 		<junit.version>5.3.1</junit.version>
@@ -15,7 +41,7 @@
 		<slf4j-api.version>1.7.21</slf4j-api.version>
 		<jdk-serializable-functional.version>1.8.2</jdk-serializable-functional.version>
 		<assertj.version>3.20.2</assertj.version>
-		<tools.version>1.0-SNAPSHOT</tools.version>
+		<tools.version>1.0.1</tools.version>
 	</properties>
 	
 	<dependencies>
@@ -105,10 +131,89 @@
 					</execution>
 				</executions>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.1.1</version>
+				<configuration>
+					<failOnError>false</failOnError>
+					<doclint>none</doclint>
+				</configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<useReleaseProfile>false</useReleaseProfile>
+					<releaseProfiles>release</releaseProfiles>
+					<goals>deploy</goals>
+				</configuration>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>3.0.1</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.7</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	
+	<scm>
+		<connection>scm:git:https://github.com/codefilarete/reflection.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/codefilarete/reflection.git</developerConnection>
+		<url>https://github.com/codefilarete/reflection.git</url>
+		<tag>HEAD</tag>
+	</scm>
+	
 	<distributionManagement>
+		<repository>
+			<id>ossrh</id>
+			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
 		<snapshotRepository>
 			<id>snapshots</id>
 			<url>https://codefilarete.jfrog.io/artifactory/default-maven-virtual/</url>
