--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<slf4j-api.version>1.7.21</slf4j-api.version>
 		<jdk-serializable-functional.version>1.8.2</jdk-serializable-functional.version>
 		<assertj.version>3.20.2</assertj.version>
-		<tools.version>1.0.2-SNAPSHOT</tools.version>
+		<tools.version>1.0.2</tools.version>
 	</properties>
 	
 	<dependencies>
@@ -211,7 +211,7 @@
 	
 	<scm>
 		<connection>scm:git:https://github.com/codefilarete/reflection.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com/codefilarete/reflection.git</developerConnection>
+		<developerConnection>scm:git:https://github.com/codefilarete/reflection.git</developerConnection>
 		<url>https://github.com/codefilarete/reflection.git</url>
 		<tag>HEAD</tag>
 	</scm>
