--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	
 	<groupId>org.codefilarete</groupId>
 	<artifactId>reflection</artifactId>
-	<version>1.1.0</version>
+	<version>1.1.1-SNAPSHOT</version>
 	
 	<name>Reflection</name>
 	<description>Codefilarete Reflection aims at providing access to bean properties.</description>
@@ -213,7 +213,7 @@
 		<connection>scm:git:https://github.com/codefilarete/reflection.git</connection>
 		<developerConnection>scm:git:https://github.com/codefilarete/reflection.git</developerConnection>
 		<url>https://github.com/codefilarete/reflection.git</url>
-		<tag>1.1.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 	
 	<distributionManagement>
