--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
 	</dependencies>
 	
 	<build>
+		<finalName>codefilarete-${artifactId}-${version}</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
